Add `grunt run-build` to run a server against production.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"grunt": "0.3.x",
-		"grunt-requirejs": "0.2.x"
+		"grunt-requirejs": "0.2.x",
+		"connect": "2.6.x"
 	}
 }
