Added grunt-mocha, initial unit tests added

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"grunt": "0.3.x",
 		"grunt-contrib-requirejs": "0.3.x",
+		"grunt-mocha": "0.1.x",
 		"connect": "2.6.x"
 	}
 }
